# map_app_search_service

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Program.cs  README.md  SearchServiceOptions.cs  WeatherForecast.cs  class_diagram.plantuml  entrypoint.sh  index-sort-f.html  index-sort-l.html  index.html  k8s_service.tmp.yml  map_app_search_service.http  map_app_search_service.sln  search_places_sequence_diagram.plantuml
.github/workflows/: main.yml
Controllers/: SearchController.cs  WeatherForecastController.cs
Properties/: launchSettings.json
__w/map_app_search_service/map_app_search_service/modules/service/serviceImpl/src/: MapBoxPlacesPathBuilder.cpp.func-sort-c.html  MapBoxPlacesPathBuilder.cpp.func.html  MapBoxPlacesPathBuilder.cpp.gcov.html  SearchServiceProxyImpl.cpp.func-sort-c.html  SearchServiceProxyImpl.cpp.func.html  SearchServiceProxyImpl.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
__w/map_app_search_service/map_app_search_service/tests/unit_tests/inc/mocks/: MockHttpClient.h.func-sort-c.html  MockHttpClient.h.func.html  MockHttpClient.h.gcov.html  MockPathBuilder.h.func-sort-c.html  MockPathBuilder.h.func.html  (+4 more)
__w/map_app_search_service/map_app_search_service/tests/unit_tests/src/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
app/: CMakeLists.txt  index.html  package.json
app/src/: main.cpp
gmock/: gmock-actions.h.func-sort-c.html  gmock-actions.h.func.html  gmock-actions.h.gcov.html  gmock-cardinalities.h.func-sort-c.html  gmock-cardinalities.h.func.html  gmock-cardinalities.h.gcov.html  gmock-matchers.h.func-sort-c.html  gmock-matchers.h.func.html  gmock-matchers.h.gcov.html  gmock-spec-builders.h.func-sort-c.html  gmock-spec-builders.h.func.html  gmock-spec-builders.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gmock/internal/: gmock-internal-utils.h.func-sort-c.html  gmock-internal-utils.h.func.html  gmock-internal-utils.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gtest/: gtest-assertion-result.h.func-sort-c.html  gtest-assertion-result.h.func.html  gtest-assertion-result.h.gcov.html  gtest-matchers.h.func-sort-c.html  gtest-matchers.h.func.html  gtest-matchers.h.gcov.html  gtest-printers.h.func-sort-c.html  gtest-printers.h.func.html  gtest-printers.h.gcov.html  gtest.h.func-sort-c.html  gtest.h.func.html  gtest.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
gtest/internal/: gtest-internal.h.func-sort-c.html  gtest-internal.h.func.html  gtest-internal.h.gcov.html  gtest-port.h.func-sort-c.html  gtest-port.h.func.html  gtest-port.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
modules/: CMakeLists.txt
modules/endpoint/: CMakeLists.txt
modules/endpoint/inc/endpoint/: SearchEndpoint.h
modules/endpoint/src/: SearchEndpoint.cpp
modules/service/: CMakeLists.txt
modules/service/service/: CMakeLists.txt
modules/service/service/inc/service/: SearchService.h
modules/service/serviceImpl/: CMakeLists.txt
modules/service/serviceImpl/inc/serviceImpl/: MapBoxPlacesPathBuilder.h  PathBuilder.h  SearchServiceProxyImpl.h
modules/service/serviceImpl/src/: MapBoxPlacesPathBuilder.cpp  SearchServiceProxyImpl.cpp
modules/utils/: CMakeLists.txt
modules/utils/httpClient/: CMakeLists.txt
modules/utils/httpClient/inc/httpClient/: HttpClient.h  http_utils.h
modules/utils/httpClientImpl/: CMakeLists.txt
modules/utils/httpClientImpl/inc/httpClientImpl/: HttpClientImpl.h
modules/utils/httpClientImpl/src/: HttpClientImpl.cpp
modules/wasmBinding/: CMakeLists.txt
modules/wasmBinding/inc/wasmBinding/: SearchServiceWrapper.h
modules/wasmBinding/src/: SearchServiceWrapper.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/inc/mocks/: MockHttpClient.h  MockPathBuilder.h
tests/unit_tests/src/tests/: MapBoxPlacesPathBuilder_tests.cpp  SearchServiceProxyImpl_tests.cpp
usr/include/c++/12/: atomic.func-sort-c.html  atomic.func.html  atomic.gcov.html  index-sort-f.html  index-sort-l.html  index.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  typeinfo.func-sort-c.html  typeinfo.func.html  typeinfo.gcov.html
usr/include/c++/12/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocated_ptr.h.func-sort-c.html  allocated_ptr.h.func.html  allocated_ptr.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  atomic_base.h.func-sort-c.html  atomic_base.h.func.html  atomic_base.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html  invoke.h.func-sort-c.html  invoke.h.func.html  invoke.h.gcov.html  move.h.func-sort-c.html  move.h.func.html  move.h.gcov.html  new_allocator.h.func-sort-c.html  new_allocator.h.func.html  new_allocator.h.gcov.html  ptr_traits.h.func-sort-c.html  ptr_traits.h.func.html  ptr_traits.h.gcov.html  range_access.h.func-sort-c.html  range_access.h.func.html  range_access.h.gcov.html  shared_ptr.h.func-sort-c.html  (+53 more)
usr/include/c++/12/ext/: aligned_buffer.h.func-sort-c.html  aligned_buffer.h.func.html  aligned_buffer.h.gcov.html  alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  atomicity.h.func-sort-c.html  atomicity.h.func.html  atomicity.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
usr/include/x86_64-linux-gnu/c++/12/bits/: c++config.h.func-sort-c.html  c++config.h.func.html  c++config.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
(+27 files in other folders)
